# VAGE

./: .gitattributes  .gitignore  .markdownlintignore  .markdownlintrc  CONTRIBUTING.md  README.md  Whitepaper.md  deny.toml  devnet_start.ps1  devnet_start.sh
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: README.md  benchmarks.yml  ci.yml  coverage.yml  dependencies.yml  docs.yml  release.yml  rust.yml  security.yml
vage/: .gitignore  Cargo.toml  LICENSE  rust-toolchain.toml
vage/.github/workflows/: ci.yml
vage/configs/: devnet.json  genesis.json  validator_keys.json
vage/crates/block/: Cargo.toml
vage/crates/block/src/: block.rs  body.rs  header.rs  lib.rs
vage/crates/consensus/: Cargo.toml
vage/crates/consensus/src/: consensus_state.rs  governance.rs  lib.rs  metrics.rs  slashing.rs  upgrades.rs
vage/crates/consensus/src/fastpath/: mod.rs  optimistic.rs
vage/crates/consensus/src/hotstuff/: mod.rs  pacemaker.rs  proposer.rs  vote.rs
vage/crates/consensus/src/pos/: mod.rs  staking.rs  uptime.rs  validator_set.rs
vage/crates/crypto/: Cargo.toml
vage/crates/crypto/src/: bls.rs  ed25519.rs  hash.rs  lib.rs  merkle.rs
vage/crates/execution/: Cargo.toml
vage/crates/execution/benches/: gas_bench.rs
vage/crates/execution/src/: evm_runtime.rs  executor.rs  gas.rs  lib.rs  runtime.rs  state_transition.rs
vage/crates/execution/src/parallel/: commit.rs  dependency.rs  executor.rs  mod.rs  mv_memory.rs  scheduler.rs
vage/crates/light-client/: Cargo.toml
vage/crates/light-client/src/: client.rs  header_sync.rs  lib.rs  proofs.rs  verifier.rs
vage/crates/mempool/: Cargo.toml
vage/crates/mempool/src/: lib.rs  mempool.rs  ordering.rs  pool.rs  validation.rs
vage/crates/networking/: Cargo.toml
vage/crates/networking/src/: chain_sync.rs  gossip.rs  lib.rs  metrics.rs  p2p.rs  peer.rs  rpc.rs
vage/crates/node/: Cargo.toml
vage/crates/node/src/: lib.rs  metrics.rs  node.rs  recovery.rs  services.rs  shutdown.rs  startup.rs  state_sync.rs
vage/crates/node/tests/: integration_tests.rs
vage/crates/rpc/: Cargo.toml
vage/crates/rpc/src/: context.rs  error.rs  lib.rs  metrics.rs  middleware.rs  protocol.rs  server.rs
vage/crates/rpc/src/routes/: blocks.rs  health.rs  mod.rs  network.rs  state.rs  tx.rs
vage/crates/state/: Cargo.toml
vage/crates/state/src/: lib.rs  node.rs  proof.rs  state_db.rs  verkle_tree.rs
vage/crates/storage/: Cargo.toml
vage/crates/storage/src/: lib.rs  redb_store.rs  schema.rs  tables.rs
vage/crates/types/: Cargo.toml
vage/crates/types/benches/: transaction_bench.rs
vage/crates/types/src/: account.rs  address.rs  lib.rs  message.rs  serialization.rs  transaction.rs  validator.rs
vage/crates/zk/: Cargo.toml
vage/crates/zk/src/: lib.rs
vage/crates/zk/src/groth16/: circuit.rs  mod.rs  prover.rs  verifier.rs
vage/crates/zk/src/sp1/: mod.rs  prover.rs  verifier.rs
vage/docker/: Dockerfile  docker-compose.yml
vage/docs/: CLI_AND_ACCOUNT_GUIDE.md  DEVNET.md  SETUP_GUIDE.md  architecture.md  consensus.md  mev-protection.md  parallel-evm.md  rpc-api.md  running-node.md  verkle-state.md
vage/monitoring/: docker-compose.yml  prometheus.yml
vage/network/bootnodes/: nodes.json
vage/network/devnet/: nodes.json
vage/network/explorer/: Cargo.toml
vage/network/explorer/src/: indexer.rs  main.rs  server.rs
vage/network/upgrades/: v1.json
vage/network/validators/: peer_info.json
vage/scripts/: start_devnet.sh
vage/tests/: integration_tests.rs
vage/validators/validator-1/: node.json
vage/validators/validator-2/: node.json
vage/validators/validator-3/: node.json
vage/validators/validator-4/: node.json
