[workspace]
resolver = "2"

members = [
    "bin/node",
    "bin/cli",
    "crates/*",
    "network/explorer",
]

[workspace.dependencies]
# Standard dependencies
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.4", features = ["derive"] }
async-trait = "0.1"
futures = "0.3"
log = "0.4"
rand = "0.8"
hex = "0.4"
indexmap = { version = "2.2", features = ["serde"] }
primitive-types = { version = "0.12", features = ["serde"] }
derive_more = "0.99"
chrono = { version = "0.4", features = ["serde"] }
lru = "0.12"
metrics = "0.22"
parking_lot = "0.12"

# Cryptography
sha3 = "0.10"
sha2 = "0.10"
blake3 = "1.3"
bincode = "1.3"
rlp = "0.5"
ed25519-dalek = "2.1"
ark-bls12-381 = "0.4"
ark-ec = "0.4"
ark-ff = "0.4"
ark-serialize = "0.4"
ark-groth16 = "0.4"
ark-relations = "0.4"

# Networking
libp2p = { version = "0.53", default-features = false, features = ["tcp", "dns", "websocket", "noise", "tls", "yamux", "gossipsub", "mdns", "kad", "identify", "ping", "request-response", "macros", "tokio", "serde"] }
tonic = "0.11"
prost = "0.12"
axum = "0.7"
tower-http = { version = "0.5", features = ["trace", "cors"] }
reqwest = { version = "0.11", features = ["json"] }
axum-server = { version = "0.6", features = ["tls-rustls"] }

# Storage
redb = "2.1"

# Types (local crates)
vage-types = { path = "crates/types" }
vage-crypto = { path = "crates/crypto" }
vage-block = { path = "crates/block" }
vage-networking = { path = "crates/networking" }
vage-mempool = { path = "crates/mempool" }
vage-consensus = { path = "crates/consensus" }
vage-execution = { path = "crates/execution" }
vage-state = { path = "crates/state" }
vage-storage = { path = "crates/storage" }
vage-zk = { path = "crates/zk" }
vage-light-client = { path = "crates/light-client" }
vage-node = { path = "crates/node" }
vage-rpc = { path = "crates/rpc" }
# Parallel computing
rayon = "1.8"
