[package]
name = "vage-consensus"
version = "0.1.0"
edition = "2021"

[dependencies]
vage-types = { workspace = true }
vage-block = { path = "../block" }
vage-crypto = { path = "../crypto" }
vage-execution = { workspace = true }
vage-storage = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
ed25519-dalek = { workspace = true }
bincode = { workspace = true }
primitive-types = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
