[package]
name = "vage-execution"
version = "0.1.0"
edition = "2021"

[dependencies]
vage-types = { workspace = true }
vage-state = { path = "../state" }
vage-storage = { path = "../storage" }
vage-crypto = { path = "../crypto" }
vage-block = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }
sha2.workspace = true
bincode.workspace = true
primitive-types.workspace = true
revm = { version = "3.5", default-features = false, features = ["std", "serde"] }
keccak-hash = "0.10"
hex = { workspace = true }

[dev-dependencies]
ed25519-dalek = { workspace = true }
criterion = "0.5"

[[bench]]
name = "gas_bench"
harness = false
