[package]
name = "vage-mempool"
version = "0.1.0"
edition = "2021"

[dependencies]
vage-types = { workspace = true }
vage-crypto = { path = "../crypto" }
vage-state = { path = "../state" }
vage-storage = { path = "../storage" }
vage-execution = { path = "../execution" }
indexmap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
vage-block = { workspace = true }
vage-networking = { path = "../networking" }
rayon = { workspace = true }
primitive-types.workspace = true
bincode.workspace = true
sha2 = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
