[package]
name = "vage-networking"
version = "0.1.0"
edition = "2021"

[dependencies]
vage-types = { workspace = true }
vage-crypto = { path = "../crypto" }
vage-block = { workspace = true }
vage-consensus = { workspace = true }
vage-state = { workspace = true }
vage-zk = { workspace = true }
libp2p = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
void = "1.0"
sha2.workspace = true
metrics = { workspace = true }

[dev-dependencies]
primitive-types = { workspace = true }
ed25519-dalek = { workspace = true }
