[package]
name = "vage-types"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
primitive-types = { workspace = true }
derive_more = { workspace = true }
sha2 = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
rlp = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "transaction_bench"
harness = false
