[package]
name = "vage-explorer"
version = "0.1.0"
edition = "2021"

[dependencies]
vage-types = { workspace = true }
vage-block = { workspace = true }
vage-rpc = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
hex = { workspace = true }
